Can insert something. Hard code several things.

--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -11,6 +11,9 @@ handlers:
 - url: /bootstrap
   static_dir: bootstrap
 
+- url: /management
+  script: management.app
+
 - url: /.*
   script: login.app
 # [END handlers]
