--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -14,6 +14,9 @@ handlers:
 - url: /management
   script: management.app
 
+- url: /create_stream
+  script: create_stream.app
+
 - url: /.*
   script: login.app
 # [END handlers]
