added blob_store_test.py to try photo uploads. During upload, Photo entity will be created with blobkey and parent Stream. Parent stream number increase by 1.

--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -17,8 +17,14 @@ handlers:
 - url: /create_stream
   script: create_stream.app
 
-- url: /.*
+- url: /
   script: login.app
+
+- url: /blobstore.*
+  script: blob_store_test.app
+
+#- url: /blobstore/serviece
+#  script: blob_store_test.app
 # [END handlers]
 
 # [START libraries]
