--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -23,6 +23,9 @@ handlers:
 - url: /blobstore.*
   script: blob_store_test.app
 
+- url: /searchstream.*
+  script: search_stream.app
+
 #- url: /blobstore/serviece
 #  script: blob_store_test.app
 # [END handlers]
