--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -11,6 +11,9 @@ handlers:
 - url: /bootstrap
   static_dir: bootstrap
 
+- url: /Content
+  static_dir: Content
+
 - url: /management
   script: management.app
 
