--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -29,6 +29,9 @@ handlers:
 - url: /searchstream.*
   script: search_stream.app
 
+- url: /all_stream.*
+  script: all_stream.app
+
 #- url: /blobstore/serviece
 #  script: blob_store_test.app
 # [END handlers]
