Add cron job entry

--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -23,6 +23,9 @@ handlers:
 - url: /
   script: login.app
 
+- url: /trending_cron
+  script: trending_cron.app
+
 - url: /blobstore.*
   script: blob_store_test.app
 
