Added comment and upload date for photo

--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -20,7 +20,7 @@ handlers:
 - url: /create_stream
   script: create_stream.app
 
-- url: /view_stream
+- url: /view_stream.*
   script: view_stream.app
 
 
