added photo index, fixed subscription link

--- a/mini_project/appengine-miniproject-python/index.yaml
+++ b/mini_project/appengine-miniproject-python/index.yaml
@@ -4,3 +4,15 @@ indexes:
   properties:
   - name: date
     direction: desc
+
+- kind: Trending_stream_entity
+  properties:
+  - name: ts
+    direction: desc
+  - name: rank
+
+- kind: Photo
+  ancestor: yes
+  properties:
+  - name: uploaddate
+    direction: desc
