added scrow bar and geo points, scrow bar filtering not implemented yet

--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -59,6 +59,9 @@ handlers:
 - url: /subscribe*
   script: subscribe.app
 
+- url: /geo_view
+  script: geo_view.app
+
 #- url: /blobstore/serviece
 #  script: blob_store_test.app
 # [END handlers]
