--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -59,14 +59,15 @@ handlers:
 - url: /subscribe*
   script: subscribe.app
 
-#- url: /blobstore/serviece
-#  script: blob_store_test.app
-# [END handlers]
+- url: /autocomplete.*  # This regex directs all routes to main.app
+  script: autocomplete.app
 
 # [START libraries]
 libraries:
 - name: webapp2
   version: latest
 - name: jinja2
+  version: latest
+- name: pycrypto
   version: latest
 # [END libraries]
