fixed rogue change, added search api and nearby api

--- a/mini_project/appengine-miniproject-python/app.yaml
+++ b/mini_project/appengine-miniproject-python/app.yaml
@@ -68,6 +68,12 @@ handlers:
 - url: /api/all_stream.*  # This regex directs all routes to main.app
   script: all_stream_api.app
 
+- url: /api/search_stream.*
+  script: search_stream_api.app
+
+- url: /api/nearby_pictures.*
+  script: nearby_pictures_api.app
+
 #- url: /blobstore/serviece
 #  script: blob_store_test.app
 # [END handlers]
